// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Domain Admin should create domain [Mutation] 1`] = `
Object {
  "createDomain": Object {
    "domain": Object {
      "activeQuestion": null,
      "activeSurvey": null,
      "clients": null,
      "name": "TestDomain",
      "owners": Array [
        Object {
          "email": "jane@doe.com",
        },
      ],
      "states": null,
    },
  },
}
`;

exports[`Domain Admin should return all domains [Query] 1`] = `
Object {
  "domains": Array [
    Object {
      "activeQuestion": Object {
        "description": "Bitte zeigen Sie mit einem \\"Like\\", ob Ihnen dieses Objekt gefällt.",
      },
      "activeSurvey": Object {
        "title": "Untersuchung zum Verhalten von Informatikern in Hochschulen",
      },
      "clients": Array [
        Object {
          "name": "Forum Fernseher",
        },
        Object {
          "name": "Forum Tablet",
        },
      ],
      "name": "Forum Gummersbach",
      "owners": Array [
        Object {
          "email": "john@doe.com",
        },
      ],
      "states": null,
    },
    Object {
      "activeQuestion": Object {
        "description": null,
      },
      "activeSurvey": Object {
        "title": "Öffentliche Umfrage im Rahmen des Modules \\"Computerethik\\"",
      },
      "clients": Array [
        Object {
          "name": "Mensa Kiosk",
        },
        Object {
          "name": "Mensa Tablet",
        },
      ],
      "name": "TH-Koeln: Gummersbach Mensa",
      "owners": Array [
        Object {
          "email": "jane@doe.com",
        },
      ],
      "states": null,
    },
    Object {
      "activeQuestion": Object {
        "description": null,
      },
      "activeSurvey": Object {
        "title": "Öffentliche Umfrage im Rahmen des Modules \\"Computerethik (Kopie)\\"",
      },
      "clients": null,
      "name": "TH-Koeln: Gummersbach Eingang",
      "owners": Array [
        Object {
          "email": "jane@doe.com",
        },
      ],
      "states": null,
    },
  ],
}
`;

exports[`Domain Admin should return domain not owned by User [Query] 1`] = `
Object {
  "domain": Object {
    "activeQuestion": Object {
      "description": null,
    },
    "activeSurvey": Object {
      "title": "Öffentliche Umfrage im Rahmen des Modules \\"Computerethik\\"",
    },
    "clients": Array [
      Object {
        "name": "Mensa Kiosk",
      },
      Object {
        "name": "Mensa Tablet",
      },
    ],
    "name": "TH-Koeln: Gummersbach Mensa",
    "owners": Array [
      Object {
        "email": "jane@doe.com",
      },
    ],
    "states": null,
  },
}
`;

exports[`Domain Admin should return domain owned by User [Query] 1`] = `
Object {
  "domain": Object {
    "activeQuestion": Object {
      "description": "Bitte zeigen Sie mit einem \\"Like\\", ob Ihnen dieses Objekt gefällt.",
    },
    "activeSurvey": Object {
      "title": "Untersuchung zum Verhalten von Informatikern in Hochschulen",
    },
    "clients": Array [
      Object {
        "name": "Forum Fernseher",
      },
      Object {
        "name": "Forum Tablet",
      },
    ],
    "name": "Forum Gummersbach",
    "owners": Array [
      Object {
        "email": "john@doe.com",
      },
    ],
    "states": null,
  },
}
`;

exports[`Domain Admin should update domain not owned by User [Mutation] 1`] = `
Object {
  "updateDomain": Object {
    "domain": Object {
      "activeQuestion": Object {
        "description": null,
      },
      "activeSurvey": Object {
        "title": "Untersuchung zum Verhalten von Informatikern in Hochschulen",
      },
      "clients": Array [
        Object {
          "name": "Forum Fernseher",
        },
        Object {
          "name": "Forum Tablet",
        },
      ],
      "name": "RenamedTestDomain",
      "owners": Array [
        Object {
          "email": "john@doe.com",
        },
      ],
      "states": null,
    },
  },
}
`;

exports[`Domain Admin should update domain owned by User [Mutation] 1`] = `
Object {
  "updateDomain": Object {
    "domain": Object {
      "activeQuestion": Object {
        "description": null,
      },
      "activeSurvey": Object {
        "title": "Untersuchung zum Verhalten von Informatikern in Hochschulen",
      },
      "clients": Array [
        Object {
          "name": "Mensa Kiosk",
        },
        Object {
          "name": "Mensa Tablet",
        },
      ],
      "name": "RenamedTestDomain",
      "owners": Array [
        Object {
          "email": "jane@doe.com",
        },
      ],
      "states": null,
    },
  },
}
`;

exports[`Domain Client should return domain [Query] 1`] = `
Object {
  "domain": Object {
    "activeQuestion": Object {
      "description": "Bitte zeigen Sie mit einem \\"Like\\", ob Ihnen dieses Objekt gefällt.",
    },
    "activeSurvey": Object {
      "title": "Untersuchung zum Verhalten von Informatikern in Hochschulen",
    },
    "clients": Array [
      Object {
        "name": "Forum Fernseher",
      },
      Object {
        "name": "Forum Tablet",
      },
    ],
    "name": "Forum Gummersbach",
    "owners": null,
    "states": null,
  },
}
`;

exports[`Domain Client should return domains assigned to [Query] 1`] = `
Object {
  "domains": Array [
    Object {
      "activeQuestion": Object {
        "description": null,
      },
      "activeSurvey": Object {
        "title": "Öffentliche Umfrage im Rahmen des Modules \\"Computerethik (Kopie)\\"",
      },
      "clients": null,
      "name": "TH-Koeln: Gummersbach Eingang",
      "owners": null,
      "states": null,
    },
  ],
}
`;

exports[`Domain User should create domain [Mutation] 1`] = `
Object {
  "createDomain": Object {
    "domain": Object {
      "activeQuestion": null,
      "activeSurvey": null,
      "clients": null,
      "name": "TestDomain",
      "owners": Array [
        Object {
          "email": "john@doe.com",
        },
      ],
      "states": null,
    },
  },
}
`;

exports[`Domain User should return all domains [Query] 1`] = `
Object {
  "domains": Array [
    Object {
      "activeQuestion": Object {
        "description": "Bitte zeigen Sie mit einem \\"Like\\", ob Ihnen dieses Objekt gefällt.",
      },
      "activeSurvey": Object {
        "title": "Untersuchung zum Verhalten von Informatikern in Hochschulen",
      },
      "clients": Array [
        Object {
          "name": "Forum Fernseher",
        },
        Object {
          "name": "Forum Tablet",
        },
      ],
      "name": "Forum Gummersbach",
      "owners": Array [
        Object {
          "email": "john@doe.com",
        },
      ],
      "states": null,
    },
  ],
}
`;

exports[`Domain User should return domain not owned by User [Query] 1`] = `
Object {
  "domain": Object {
    "activeQuestion": Object {
      "description": null,
    },
    "activeSurvey": Object {
      "title": "Öffentliche Umfrage im Rahmen des Modules \\"Computerethik\\"",
    },
    "clients": Array [
      Object {
        "name": "Mensa Kiosk",
      },
      Object {
        "name": "Mensa Tablet",
      },
    ],
    "name": "TH-Koeln: Gummersbach Mensa",
    "owners": null,
    "states": null,
  },
}
`;

exports[`Domain User should return domain owned by User [Query] 1`] = `
Object {
  "domain": Object {
    "activeQuestion": Object {
      "description": "Bitte zeigen Sie mit einem \\"Like\\", ob Ihnen dieses Objekt gefällt.",
    },
    "activeSurvey": Object {
      "title": "Untersuchung zum Verhalten von Informatikern in Hochschulen",
    },
    "clients": Array [
      Object {
        "name": "Forum Fernseher",
      },
      Object {
        "name": "Forum Tablet",
      },
    ],
    "name": "Forum Gummersbach",
    "owners": Array [
      Object {
        "email": "john@doe.com",
      },
    ],
    "states": null,
  },
}
`;

exports[`Domain User should update domain owned by User [Mutation] 1`] = `
Object {
  "updateDomain": Object {
    "domain": Object {
      "activeQuestion": Object {
        "description": null,
      },
      "activeSurvey": Object {
        "title": "Untersuchung zum Verhalten von Informatikern in Hochschulen",
      },
      "clients": Array [
        Object {
          "name": "Forum Fernseher",
        },
        Object {
          "name": "Forum Tablet",
        },
      ],
      "name": "RenamedTestDomain",
      "owners": Array [
        Object {
          "email": "john@doe.com",
        },
      ],
      "states": null,
    },
  },
}
`;
